--- a/Sentiment_Analysis_Disaster_or_Not.ipynb
+++ b/Sentiment_Analysis_Disaster_or_Not.ipynb
@@ -41,7 +41,11 @@
         "## Natural Language Processing TensorFlow\n",
         "NLP merupakan sebuah metode untuk memberikan sebuah informasi dari Text (tulisan) maupun Suara. Kali ini saya akan mencontohkan penggunaan NLP pada Text dalam penentuan sebuah Tweet seseorang, Tweet tersebut membahas tentang bencana atau tidak.\n",
         "\n",
-        "Dataset : https://www.kaggle.com/competitions/nlp-getting-started/data?select=train.csv"
+        "Dataset : https://www.kaggle.com/competitions/nlp-getting-started/data?select=train.csv\n",
+        "\n",
+        "Created by Nugroho Budi Prasetyo\n",
+        "\n",
+        "GitHub : https://github.com/tyoamazinglib"
       ],
       "metadata": {
         "id": "8tUJxkw6-lnp"
@@ -54,7 +58,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "LOh562Wd-PTV",
         "outputId": "3facf56f-b547-4e5b-c2ba-01cd1b33c650"
@@ -89,7 +94,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "g0BxtpHnI8OU",
         "outputId": "1e84903a-f34b-4e14-ee80-e0a95b5ae802"
@@ -506,7 +512,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "u-hMlnfOMW7F",
         "outputId": "541e3e58-981d-4962-ac92-5a17d63b27fe"
@@ -546,7 +553,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "pm73HZT8MdOX",
         "outputId": "78c7d55e-6b49-4558-d67b-254ccd2bdc19"
@@ -841,7 +849,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "zg-voWsIOvwa",
         "outputId": "b5ef8ab6-e1a4-4ac1-f5a4-193ed2dae0e9"
@@ -921,7 +930,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "9Xtt06VrXt1C",
         "outputId": "f591b2bf-1f30-402b-8f9f-4f85d47afbd6"
@@ -975,7 +985,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "bK6QwAVPHMJ0",
         "outputId": "677db36f-9cec-44df-b044-c0ac9a3cd0b5"
@@ -1051,7 +1062,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "79nnKi_5Fj40",
         "outputId": "ffba6239-cb7b-48d3-cbdc-479d5dbd6fca"
@@ -1144,7 +1156,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "p2cRN4KyH1D_",
         "outputId": "fb769f42-d84d-4336-d911-9ed5098c00c8"
@@ -1176,7 +1189,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "B4b5LaIPLSKb",
         "outputId": "9eddb2f8-58b5-468b-86a8-78805c1c3a52"
@@ -1286,7 +1300,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4pVxgjEAPYS2",
         "outputId": "60afb451-864e-4289-88a3-347c5b5a10ca"
@@ -1350,7 +1365,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "JnI9o_uhRgzH",
         "outputId": "199a7113-d6c7-41b2-e0ed-aad67ff9f360"
@@ -1476,7 +1492,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "omd7iUEkYSu1",
         "outputId": "a8dc0376-b770-4ec7-c936-e20e37439d7d"
@@ -1509,7 +1526,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ej35CpCPZgWX",
         "outputId": "9af3c248-1ead-4f9c-8620-8e6c3026e15f"
@@ -1790,17 +1808,6 @@
         "id": "VjtahGJka7Fq"
       },
       "execution_count": 225,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "NbWHA6eCbDLi"
-      },
-      "execution_count": null,
       "outputs": []
     }
   ]
